--- a/src/index.css
+++ b/src/index.css
@@ -58,19 +58,6 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-}
-
-#root {
-  width: 100%;
-  height: 100%;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
